Fix sidebar width on narrow screens

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -54,7 +54,7 @@ a:hover {
 
 .sidebar {
   max-width: 400px;
-  min-width: 200px;
+  min-width: 240px;
   /* Background pattern from Toptal Subtle Patterns */
   background-image: url("../images/geometry2.png");
   background-color: $mainColor;
